# eventit-py

./: .gitignore  .pre-commit-config.yaml  README.md  mongodb_helm_info.txt  port_forward_mongodb.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: master_testing.yml  python-package.yml  release.yml
docs/source/: conf.py  eventit_py.base_logger.rst  eventit_py.event_logger.rst  eventit_py.logging_backends.rst  eventit_py.pydantic_events.rst  eventit_py.rst  index.rst  modules.rst
scripts/: get_mongodb_uri.py  port_forward_mongodb.sh  run_coverage_report.sh  start_minikube_mongodb.sh
src/authit_py/: base_plugin.py  events.py  pydantic_events.py
src/eventit_py/: base_logger.py  event_logger.py  flask_plugin.py  logging_backends.py  pydantic_events.py
tests/: conftest.py  test_bad_arguments.py  test_base_logger.py  test_countable_events.py  test_custom_metrics.py  test_event_search.py  test_event_setup.py  test_eventit_general.py  test_eventit_mongodb.py  test_flask_extension.py  test_logging_backends.py  test_pydantic_events.py
tests/lib/: __init__.py
