[tool.poetry]
name = "authit-py"
version = "0.1.0"
description = ""
authors = ["Alexander Lukens <alexdlukens@gmail.com>"]
readme = "README.md"
packages = [{include = "authit_py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
docker = "^7.0.0"
pytest = "^7.2.2"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
